
* Added ability to remove files (on the surface, not for real).

* From now right panel would be always shown no matter js enabled or
disabled in browsers.

* Added plagin terminal ( ` button under TAB).

* Added ability to execute commands on server thrue terminal.

* Added appcache paramter to config.json

* Added ability convert charset from win to unicode on win32.

* From now on disconnecting - trying to do new connection.

2012.08.24, Version 0.1.6
 
* From now jsload, cssload and anyload suport arrays.

* Added ability to move scrollbar, when Home and
End buttons pressed.

* Added ability to move with Page Up and Page Down
buttons.

* Added moving scrolling by cursor ability.

* Fixed bug with go to parent directory: from now,
if parent directory not in view area, page will
scroll to needed place.

* Fixed bug with tab key pressed.

* Fixed bug: files now clickable to.

* Fixed bug with double click on files.

* Fixed bug with double click on images.

* Fixed bug with Array.isArray and getElementsByClassName in IE.

* Fixed bug with document.head in IE.

* JQuery 1.7.2 changed to 1.8.0

* Added support of mibile browsers and touch events.

* Fixed bug with ignoring all browser defined keys.

* Moved unSetCurrentfile to setCurrent file.
All the time one of files must be current, so wen we setting up some file
current, file that was previously current must be unset automatically.

* Added context menu on shift + F10.

* A little bit beautified css.

* Added function getRefreshButton.

* Fixed bug with refreshing directory, from now current file would not be seeted up to first, after refresh.

* Added ability to view any file.

* Moved error message a little bit lower.

* Added ability to download files.


2012.08.06, Version 0.1.5

* Added tab support.

* Fixed bug with Path links.

* From now CodeMirror js files loads, when f4 key pressed.

* Fixed bug with showing CodeMirror after first show.

* Added ability to read files in CodeMirror.
