@@ -17,6 +17,7 @@ var CloudCommander, io;
             
             socket.on('connect', function () {
                 outToTerminal('socket connected');
+                JqueryTerminal.Term.resume();
             });
             
             socket.on('message', function (msg) {
@@ -26,6 +27,7 @@ var CloudCommander, io;
             
             socket.on('disconnect', function () {
                 outToTerminal('socket disconected');
+                JqueryTerminal.Term.pause();
             });
         },
         
