@@ -57,13 +57,12 @@ var CloudCommander, $;
         KeyBinding.unSet();
         
         $(function($, undefined) {
-            $('#terminal').terminal(function(command, term) {
-                JqueryTerminal.Term = term;
+            JqueryTerminal.Term = $('#terminal').terminal(function(command, term){
                 term.echo('');
                 cloudcmd.Socket.send(command);
             }, {
-                greetings: 'Javascript Interpreter',
-                prompt: 'cloudcmd>'
+                greetings   : 'Javascript Interpreter',
+                prompt      : 'cloudcmd> '
             });
         });
     };
